Colaboratory を使用して作成しました

--- a/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
+++ b/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
@@ -1271,10 +1271,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "_2cFAY5wgfgH",
-        "outputId": "3417de26-5315-4f38-9e78-297712273c08",
+        "outputId": "8b4824f1-3ba3-416a-a27e-337909e38876",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2607,7 +2607,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ],
       "source": [
@@ -2616,7 +2616,7 @@
         "print(ans[6]) #解答表示\n",
         "df = initialize1() #初期化\n",
         "\n",
-        "df.select(pl.all().sort_by('fare'))\n",
+        "df.sort('fare')\n",
         "\n"
       ]
     },
@@ -19029,17 +19029,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "_v5l1r5jgfiV",
-        "outputId": "384ad1e0-58ba-4e04-fa67-72e02b23b78f"
+        "outputId": "6ca08842-0ad3-4e42-b42f-e70134de0f09",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 555
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[answer34]\n",
+            "\n",
+            "df.select(pl.all().n_unique())\n",
+            "\n",
+            "\n",
+            "[別解]\n",
             "\n",
             "for col in df.columns:\n",
             "    print(col, df[col].n_unique())\n",
@@ -19058,22 +19067,197 @@
             "\n",
             "df.nunique()\n",
             "\n",
-            "\n",
-            "pclass 3\n",
-            "survived 2\n",
-            "name 1307\n",
-            "sex 2\n",
-            "age 99\n",
-            "sibsp 7\n",
-            "parch 8\n",
-            "ticket 929\n",
-            "fare 282\n",
-            "cabin 187\n",
-            "embarked 4\n",
-            "boat 28\n",
-            "body 122\n",
-            "home.dest 370\n"
+            "\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "shape: (1, 14)\n",
+              "┌────────┬──────────┬──────┬─────┬─────┬──────────┬──────┬──────┬───────────┐\n",
+              "│ pclass ┆ survived ┆ name ┆ sex ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest │\n",
+              "│ ---    ┆ ---      ┆ ---  ┆ --- ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---       │\n",
+              "│ u32    ┆ u32      ┆ u32  ┆ u32 ┆     ┆ u32      ┆ u32  ┆ u32  ┆ u32       │\n",
+              "╞════════╪══════════╪══════╪═════╪═════╪══════════╪══════╪══════╪═══════════╡\n",
+              "│ 3      ┆ 2        ┆ 1307 ┆ 2   ┆ ... ┆ 4        ┆ 28   ┆ 122  ┆ 370       │\n",
+              "└────────┴──────────┴──────┴─────┴─────┴──────────┴──────┴──────┴───────────┘"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        white-space: pre;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        padding-top: 0;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        padding-bottom: 0;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe td {\n",
+              "        line-height: 95%;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "<small>shape: (1, 14)</small>\n",
+              "<thead>\n",
+              "<tr>\n",
+              "<th>\n",
+              "pclass\n",
+              "</th>\n",
+              "<th>\n",
+              "survived\n",
+              "</th>\n",
+              "<th>\n",
+              "name\n",
+              "</th>\n",
+              "<th>\n",
+              "sex\n",
+              "</th>\n",
+              "<th>\n",
+              "age\n",
+              "</th>\n",
+              "<th>\n",
+              "sibsp\n",
+              "</th>\n",
+              "<th>\n",
+              "parch\n",
+              "</th>\n",
+              "<th>\n",
+              "ticket\n",
+              "</th>\n",
+              "<th>\n",
+              "fare\n",
+              "</th>\n",
+              "<th>\n",
+              "cabin\n",
+              "</th>\n",
+              "<th>\n",
+              "embarked\n",
+              "</th>\n",
+              "<th>\n",
+              "boat\n",
+              "</th>\n",
+              "<th>\n",
+              "body\n",
+              "</th>\n",
+              "<th>\n",
+              "home.dest\n",
+              "</th>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "<td>\n",
+              "u32\n",
+              "</td>\n",
+              "</tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr>\n",
+              "<td>\n",
+              "3\n",
+              "</td>\n",
+              "<td>\n",
+              "2\n",
+              "</td>\n",
+              "<td>\n",
+              "1307\n",
+              "</td>\n",
+              "<td>\n",
+              "2\n",
+              "</td>\n",
+              "<td>\n",
+              "99\n",
+              "</td>\n",
+              "<td>\n",
+              "7\n",
+              "</td>\n",
+              "<td>\n",
+              "8\n",
+              "</td>\n",
+              "<td>\n",
+              "929\n",
+              "</td>\n",
+              "<td>\n",
+              "282\n",
+              "</td>\n",
+              "<td>\n",
+              "187\n",
+              "</td>\n",
+              "<td>\n",
+              "4\n",
+              "</td>\n",
+              "<td>\n",
+              "28\n",
+              "</td>\n",
+              "<td>\n",
+              "122\n",
+              "</td>\n",
+              "<td>\n",
+              "370\n",
+              "</td>\n",
+              "</tr>\n",
+              "</tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ],
       "source": [
@@ -19082,8 +19266,7 @@
         "print(ans[34]) #解答表示\n",
         "df = initialize1() #初期化\n",
         "\n",
-        "for col in df.columns:\n",
-        "    print(col, df[col].n_unique())\n"
+        "df.select(pl.all().n_unique())\n"
       ]
     },
     {
@@ -23059,7 +23242,7 @@
       ],
       "source": [
         "# 【38】\n",
-        "# dfのsex列にてmale→0、femlae→1に\n",
+        "# dfのsex列にてmale→0、female→1に\n",
         "# 変更し、先頭の5行を表示\n",
         "print(ans[38]) #解答表示\n",
         "df = initialize1() #初期化\n",
