localにpyarrowがない場合 to_numpyの挙動が異なる

--- a/notebook/01_Polars_100_Knocks.ipynb
+++ b/notebook/01_Polars_100_Knocks.ipynb
@@ -38,6 +38,7 @@
     "# Shift + Enterで題材データ、回答コードを読み込んで下さい\n",
     "\n",
     "!pip install polars==0.15.16\n",
+    "!pip install pyarrow==10.0.1\n",
     "!pip show pyarrow==10.0.1\n",
     "\n",
     "import pandas as pd\n",
