--- a/01_Polars_100_Knocks_for_colab.ipynb
+++ b/01_Polars_100_Knocks_for_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kunishou/Polars_100_knocks/blob/main/01_Polars_100_Knocks_for_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -719,8 +719,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "zXcWO_CdfZSY"
+        "id": "zXcWO_CdfZSY",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -783,8 +783,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "GUcor6GEfZSi"
+        "id": "GUcor6GEfZSi",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -1318,7 +1318,7 @@
       "outputs": [],
       "source": [
         "# 【68】\n",
-        "# df2にdf3を外部結合し、df2に格納\n",
+        "# df2にdf3を外部結合（結合キーはname）し、df2に格納\n",
         "#print(ans[68]) #解答表示\n",
         "df2 = initialize2() #初期化\n",
         "\n",
@@ -1931,6 +1931,11 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -1947,12 +1952,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.6"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
