--- a/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
+++ b/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kunishou/Polars_100_knocks/blob/main/02_Polars_100_Knocks_for_colab_all_answer_displayed.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -522,16 +522,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "82fi8Qd3gfgE",
-        "outputId": "4e197179-543a-4f7e-c26f-64c1cb1baba8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "82fi8Qd3gfgE",
+        "outputId": "4e197179-543a-4f7e-c26f-64c1cb1baba8"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[answer2]\n",
             "\n",
@@ -1273,17 +1273,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_2cFAY5wgfgH",
-        "outputId": "3417de26-5315-4f38-9e78-297712273c08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "_2cFAY5wgfgH",
+        "outputId": "3417de26-5315-4f38-9e78-297712273c08"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[answer6]\n",
             "\n",
@@ -1348,35 +1348,7 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "shape: (1309, 14)\n",
-              "┌────────┬──────────┬───────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
-              "│ pclass ┆ survived ┆ name              ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
-              "│ ---    ┆ ---      ┆ ---               ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
-              "│ i64    ┆ i64      ┆ str               ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
-              "╞════════╪══════════╪═══════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
-              "│ 3      ┆ 0        ┆ Storey, Mr.       ┆ male   ┆ ... ┆ S        ┆ null ┆ 261  ┆ null             │\n",
-              "│        ┆          ┆ Thomas            ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 0        ┆ Andrews, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
-              "│        ┆          ┆ Thomas Jr         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 0        ┆ Chisholm, Mr.     ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Liverpool,       │\n",
-              "│        ┆          ┆ Roderick Robert   ┆        ┆     ┆          ┆      ┆      ┆ England /        │\n",
-              "│        ┆          ┆ Cr...             ┆        ┆     ┆          ┆      ┆      ┆ Belfast          │\n",
-              "│ 1      ┆ 0        ┆ Fry, Mr. Richard  ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
-              "│ ...    ┆ ...      ┆ ...               ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
-              "│ 1      ┆ 1        ┆ Cardeza, Mr.      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ Austria-Hungary  │\n",
-              "│        ┆          ┆ Thomas Drake      ┆        ┆     ┆          ┆      ┆      ┆ / Germantown,    │\n",
-              "│        ┆          ┆ Martin...         ┆        ┆     ┆          ┆      ┆      ┆ Ph...            │\n",
-              "│ 1      ┆ 1        ┆ Cardeza, Mrs.     ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ Germantown,      │\n",
-              "│        ┆          ┆ James Warburton   ┆        ┆     ┆          ┆      ┆      ┆ Philadelphia, PA │\n",
-              "│        ┆          ┆ Ma...             ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 1        ┆ Lesurer, Mr.      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ null             │\n",
-              "│        ┆          ┆ Gustave J         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 1        ┆ Ward, Miss. Anna  ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ null             │\n",
-              "└────────┴──────────┴───────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -2604,10 +2576,38 @@
               "</tbody>\n",
               "</table>\n",
               "</div>"
+            ],
+            "text/plain": [
+              "shape: (1309, 14)\n",
+              "┌────────┬──────────┬───────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
+              "│ pclass ┆ survived ┆ name              ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
+              "│ ---    ┆ ---      ┆ ---               ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
+              "│ i64    ┆ i64      ┆ str               ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
+              "╞════════╪══════════╪═══════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
+              "│ 3      ┆ 0        ┆ Storey, Mr.       ┆ male   ┆ ... ┆ S        ┆ null ┆ 261  ┆ null             │\n",
+              "│        ┆          ┆ Thomas            ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Andrews, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
+              "│        ┆          ┆ Thomas Jr         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Chisholm, Mr.     ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Liverpool,       │\n",
+              "│        ┆          ┆ Roderick Robert   ┆        ┆     ┆          ┆      ┆      ┆ England /        │\n",
+              "│        ┆          ┆ Cr...             ┆        ┆     ┆          ┆      ┆      ┆ Belfast          │\n",
+              "│ 1      ┆ 0        ┆ Fry, Mr. Richard  ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
+              "│ ...    ┆ ...      ┆ ...               ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
+              "│ 1      ┆ 1        ┆ Cardeza, Mr.      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ Austria-Hungary  │\n",
+              "│        ┆          ┆ Thomas Drake      ┆        ┆     ┆          ┆      ┆      ┆ / Germantown,    │\n",
+              "│        ┆          ┆ Martin...         ┆        ┆     ┆          ┆      ┆      ┆ Ph...            │\n",
+              "│ 1      ┆ 1        ┆ Cardeza, Mrs.     ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ Germantown,      │\n",
+              "│        ┆          ┆ James Warburton   ┆        ┆     ┆          ┆      ┆      ┆ Philadelphia, PA │\n",
+              "│        ┆          ┆ Ma...             ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 1        ┆ Lesurer, Mr.      ┆ male   ┆ ... ┆ C        ┆ 3    ┆ null ┆ null             │\n",
+              "│        ┆          ┆ Gustave J         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 1        ┆ Ward, Miss. Anna  ┆ female ┆ ... ┆ C        ┆ 3    ┆ null ┆ null             │\n",
+              "└────────┴──────────┴───────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -15675,17 +15675,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Fx7_avM5gfiT",
-        "outputId": "6926887a-d863-4f74-d714-050a307b8dab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "Fx7_avM5gfiT",
+        "outputId": "6926887a-d863-4f74-d714-050a307b8dab"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[answer31]\n",
             "\n",
@@ -15718,36 +15718,7 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "shape: (737, 14)\n",
-              "┌────────┬──────────┬───────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
-              "│ pclass ┆ survived ┆ name              ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
-              "│ ---    ┆ ---      ┆ ---               ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
-              "│ i64    ┆ i64      ┆ str               ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
-              "╞════════╪══════════╪═══════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
-              "│ 1      ┆ 1        ┆ Allen, Miss.      ┆ female ┆ ... ┆ S        ┆ 2    ┆ null ┆ St Louis, MO     │\n",
-              "│        ┆          ┆ Elisabeth Walton  ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 0        ┆ Allison, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ 135  ┆ Montreal, PQ /   │\n",
-              "│        ┆          ┆ Hudson Joshua     ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
-              "│        ┆          ┆ Creig...          ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 0        ┆ Allison, Mrs.     ┆ female ┆ ... ┆ S        ┆ null ┆ null ┆ Montreal, PQ /   │\n",
-              "│        ┆          ┆ Hudson J C        ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
-              "│        ┆          ┆ (Bessie...        ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 1      ┆ 0        ┆ Andrews, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
-              "│        ┆          ┆ Thomas Jr         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ ...    ┆ ...      ┆ ...               ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
-              "│ 3      ┆ 0        ┆ Zabour, Miss.     ┆ female ┆ ... ┆ C        ┆ null ┆ 328  ┆ null             │\n",
-              "│        ┆          ┆ Hileni            ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 3      ┆ 0        ┆ Zakarian, Mr.     ┆ male   ┆ ... ┆ C        ┆ null ┆ 304  ┆ null             │\n",
-              "│        ┆          ┆ Mapriededer       ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 3      ┆ 0        ┆ Zakarian, Mr.     ┆ male   ┆ ... ┆ C        ┆ null ┆ null ┆ null             │\n",
-              "│        ┆          ┆ Ortin             ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "│ 3      ┆ 0        ┆ Zimmerman, Mr.    ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
-              "│        ┆          ┆ Leo               ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
-              "└────────┴──────────┴───────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -16975,10 +16946,39 @@
               "</tbody>\n",
               "</table>\n",
               "</div>"
+            ],
+            "text/plain": [
+              "shape: (737, 14)\n",
+              "┌────────┬──────────┬───────────────────┬────────┬─────┬──────────┬──────┬──────┬──────────────────┐\n",
+              "│ pclass ┆ survived ┆ name              ┆ sex    ┆ ... ┆ embarked ┆ boat ┆ body ┆ home.dest        │\n",
+              "│ ---    ┆ ---      ┆ ---               ┆ ---    ┆     ┆ ---      ┆ ---  ┆ ---  ┆ ---              │\n",
+              "│ i64    ┆ i64      ┆ str               ┆ str    ┆     ┆ str      ┆ str  ┆ i64  ┆ str              │\n",
+              "╞════════╪══════════╪═══════════════════╪════════╪═════╪══════════╪══════╪══════╪══════════════════╡\n",
+              "│ 1      ┆ 1        ┆ Allen, Miss.      ┆ female ┆ ... ┆ S        ┆ 2    ┆ null ┆ St Louis, MO     │\n",
+              "│        ┆          ┆ Elisabeth Walton  ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Allison, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ 135  ┆ Montreal, PQ /   │\n",
+              "│        ┆          ┆ Hudson Joshua     ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
+              "│        ┆          ┆ Creig...          ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Allison, Mrs.     ┆ female ┆ ... ┆ S        ┆ null ┆ null ┆ Montreal, PQ /   │\n",
+              "│        ┆          ┆ Hudson J C        ┆        ┆     ┆          ┆      ┆      ┆ Chesterville, ON │\n",
+              "│        ┆          ┆ (Bessie...        ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 1      ┆ 0        ┆ Andrews, Mr.      ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ Belfast, NI      │\n",
+              "│        ┆          ┆ Thomas Jr         ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ ...    ┆ ...      ┆ ...               ┆ ...    ┆ ... ┆ ...      ┆ ...  ┆ ...  ┆ ...              │\n",
+              "│ 3      ┆ 0        ┆ Zabour, Miss.     ┆ female ┆ ... ┆ C        ┆ null ┆ 328  ┆ null             │\n",
+              "│        ┆          ┆ Hileni            ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 3      ┆ 0        ┆ Zakarian, Mr.     ┆ male   ┆ ... ┆ C        ┆ null ┆ 304  ┆ null             │\n",
+              "│        ┆          ┆ Mapriededer       ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 3      ┆ 0        ┆ Zakarian, Mr.     ┆ male   ┆ ... ┆ C        ┆ null ┆ null ┆ null             │\n",
+              "│        ┆          ┆ Ortin             ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "│ 3      ┆ 0        ┆ Zimmerman, Mr.    ┆ male   ┆ ... ┆ S        ┆ null ┆ null ┆ null             │\n",
+              "│        ┆          ┆ Leo               ┆        ┆     ┆          ┆      ┆      ┆                  │\n",
+              "└────────┴──────────┴───────────────────┴────────┴─────┴──────────┴──────┴──────┴──────────────────┘"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -19244,9 +19244,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "id": "5uggvjcdgfiX",
-        "outputId": "3b6d7d94-d917-410b-9ad2-31d1969d31ad"
+        "outputId": "3b6d7d94-d917-410b-9ad2-31d1969d31ad",
+        "scrolled": true
       },
       "outputs": [
         {
@@ -23075,9 +23075,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "id": "vranILVogfic",
-        "outputId": "48acacac-9343-4626-d26f-9a73d5e6cdb8"
+        "outputId": "48acacac-9343-4626-d26f-9a73d5e6cdb8",
+        "scrolled": true
       },
       "outputs": [
         {
@@ -30985,17 +30985,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NID-u3Udgfi7",
-        "outputId": "29d5a06a-b319-4b53-8db2-cb048aaf9cc9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 660
-        }
+        },
+        "id": "NID-u3Udgfi7",
+        "outputId": "29d5a06a-b319-4b53-8db2-cb048aaf9cc9"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[answer62]\n",
             "\n",
@@ -31036,17 +31036,17 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'Allen, Miss.  Walton'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'Allen, Miss.  Walton'"
+            ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -33181,7 +33181,7 @@
       ],
       "source": [
         "# 【68】\n",
-        "# df2にdf3を外部結合し、df2に格納\n",
+        "# df2にdf3を外部結合（結合キーはname）し、df2に格納\n",
         "print(ans[68]) #解答表示\n",
         "df2 = initialize2() #初期化\n",
         "\n",
@@ -41342,6 +41342,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -41358,10 +41362,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.6"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
