--- a/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
+++ b/notebook/02_Polars_100_Knocks_all_answer_displayed.ipynb
@@ -32947,7 +32947,7 @@
    ],
    "source": [
     "# 【68】\n",
-    "# df2にdf3を外部結合し、df2に格納\n",
+    "# df2にdf3を外部結合（結合キーはname）し、df2に格納\n",
     "print(ans[68]) #解答表示\n",
     "df2 = initialize2() #初期化\n",
     "\n",
