--- a/01_Polars_100_Knocks_for_colab.ipynb
+++ b/01_Polars_100_Knocks_for_colab.ipynb
@@ -1952,7 +1952,12 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.6"
-    }
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
